; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/ide/extr_sl82c105.c_sl82c105_reset_host.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/ide/extr_sl82c105.c_sl82c105_reset_host.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.pci_dev = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.pci_dev*)* @sl82c105_reset_host to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @sl82c105_reset_host(%struct.pci_dev* %0) #0 {
  %2 = alloca %struct.pci_dev*, align 8
  %3 = alloca i32, align 4
  store %struct.pci_dev* %0, %struct.pci_dev** %2, align 8
  %4 = load %struct.pci_dev*, %struct.pci_dev** %2, align 8
  %5 = call i32 @pci_read_config_word(%struct.pci_dev* %4, i32 126, i32* %3)
  %6 = load %struct.pci_dev*, %struct.pci_dev** %2, align 8
  %7 = load i32, i32* %3, align 4
  %8 = or i32 %7, 4
  %9 = call i32 @pci_write_config_word(%struct.pci_dev* %6, i32 126, i32 %8)
  %10 = load %struct.pci_dev*, %struct.pci_dev** %2, align 8
  %11 = load i32, i32* %3, align 4
  %12 = and i32 %11, -5
  %13 = call i32 @pci_write_config_word(%struct.pci_dev* %10, i32 126, i32 %12)
  ret void
}

declare dso_local i32 @pci_read_config_word(%struct.pci_dev*, i32, i32*) #1

declare dso_local i32 @pci_write_config_word(%struct.pci_dev*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
